bugfix email input

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             required
           />
           <input
-            type="emial"
+            type="email"
             id="email"
             name="email"
             placeholder="Enter your email"
